# rust-task-management

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/application/interfaces/: auth.rs  health_check.rs  master_data.rs  task.rs
src/application/use_cases/: auth.rs  health_check.rs  master_data.rs  task.rs
src/domain/entities/: mod.rs
src/domain/repositories/: auth.rs  health_check.rs  master_data.rs  task.rs
src/infrastructure/: mod.rs
src/infrastructure/api/: mod.rs
src/infrastructure/api/factories/: auth.rs  health_check.rs  master_data.rs  mod.rs  task.rs
src/infrastructure/api/handlers/: auth.rs  health_check.rs  master_data_handler.rs  mod.rs  task.rs
src/infrastructure/api/requests/: task.rs
src/infrastructure/api/routes/: auth.rs  health_check.rs  master_data_routes.rs  mod.rs  task.rs
src/infrastructure/database/: auth.rs  connection.rs  health_check.rs  master_data.rs  mod.rs  task.rs
src/internal/: mod.rs
src/internal/database/migrations/: 000001_init_schema.up.sql
src/internal/pkg/: mod.rs
src/internal/pkg/exceptions/: custom_error.rs  error_message.rs  mod.rs
src/internal/pkg/middleware/: auth.rs  error.rs  jwt.rs  mod.rs  response.rs
src/internal/pkg/utils/: snowflake.rs
src/internal/server/: mod.rs
src/internal/server/config/: server.rs
src/internal/server/domain/: mod.rs
src/internal/server/domain/entities/: master_data.rs  mod.rs  task.rs  user.rs
src/internal/server/domain/repositories/: health_check.rs  master_data.rs  mod.rs  task.rs  user.rs
src/internal/server/domain/use_case/: health_check.rs  master_data.rs  mod.rs  task.rs  user.rs
src/internal/server/handlers/: health_check.rs  master_data.rs  mod.rs  task.rs  user.rs
src/internal/server/repository/: health_check.rs  master_data.rs  task.rs  user.rs
src/internal/server/request/: task.rs  user.rs
src/internal/server/use_case/: health_check.rs  master_data.rs  mod.rs  task.rs  user.rs
src/internal/tests/: master_data_test.rs  mod.rs  task_test.rs
src/shared/: mod.rs
src/shared/exceptions/: custom_error.rs  mod.rs
src/shared/middleware/: auth.rs  errors.rs  jwt.rs  mod.rs
src/shared/utils/: snowflake.rs
src/test/: master_data.rs  mod.rs  task.rs
